--- a/site/index.html
+++ b/site/index.html
@@ -165,29 +165,29 @@
                 <h2>Equipa</h2>
                 <div class="row">
                     <div class="col-md-4">
-                        <img src=""/>
+                        <img class="fotos" src="img/48.jpg"/>
                         <p>André Geraldes</p>
                     </div>
                     <div class="col-md-4">
-                        <img src=""/>
+                        <img class="fotos" src="img/26.jpg"/>
                         <p>Bruno Barbosa</p>
                     </div>
                     <div class="col-md-4">
-                        <img src=""/>
+                        <img class="fotos" src="img/carlos.jpg"/>
                         <p>Carlos Morais</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <img src=""/>
+                        <img class="fotos" src="img/rafael.jpg"/>
                         <p>Carlos Rafael</p>
                     </div>
                     <div class="col-md-4">
-                        <img src=""/>
+                        <img class="fotos" src="img/ze.jpg"/>
                         <p>José Pereira</p>
                     </div>
                     <div class="col-md-4">
-                        <img src=""/>
+                        <img class="fotos" src="img/tazzo.jpg"/>
                         <p>Nuno Oliveira</p>
                     </div>
                    
@@ -195,15 +195,15 @@
 
                 <div class="row">
                  <div class="col-md-4">
-                        <img src=""/>
+                        <img class="fotos" src="img/7.jpg"/>
                         <p>Patrícia Barros</p>
                     </div>
                     <div class="col-md-4">
-                        <img src=""/>
+                        <img class="fotos" src="img/cardoso.jpg"/>
                         <p>Paulo Cardoso</p>
                     </div>
                     <div class="col-md-4">
-                        <img src=""/>
+                        <img class="fotos" src="img/95.jpg"/>
                         <p>Sandra Ferreira</p>
                     </div>
                 </div>
